Fixed spacing with grid images

--- a/src/sections/community/styles.scss
+++ b/src/sections/community/styles.scss
@@ -118,6 +118,7 @@
       padding-right: 96px;
       margin-bottom: 10px;
       padding-top: -80px;
+      gap: 2rem;
 
       // To help move the color side bar all the way to the left
       // 960px is the max width of the div above the <main> tag
@@ -155,6 +156,8 @@
         flex-direction: row;
         justify-content: center;
         width: 100%;
+        gap: 3rem;
+        align-items: center;
         height: fit-content;
         > a {
           display: flex;
@@ -164,7 +167,7 @@
             transform: scale(1.05);
           }
         }
-        > div {
+        .descHolder {
           max-width: 570px;
           display: flex;
           flex-direction: column;
@@ -351,7 +354,7 @@
 
   &__image-grid {
     display: grid;
-    height: 268px;
+    height: 300px;
     width: 85%;
     gap: 0.5rem;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; 
